--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/georgebearden/node-auth-service/issues"
   },
-  "homepage": "https://github.com/georgebearden/node-auth-service#readme"
+  "homepage": "https://github.com/georgebearden/node-auth-service#readme",
+  "dependencies": {
+    "body-parser": "^1.13.1",
+    "express": "^4.13.0",
+    "jsonwebtoken": "^5.0.2",
+    "mongoose": "^4.0.6",
+    "morgan": "^1.6.0"
+  }
 }
