--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.0",
     "jsonwebtoken": "^5.0.2",
     "mongoose": "^4.0.6",
-    "morgan": "^1.6.0"
+    "morgan": "^1.6.0",
+    "request": "^2.58.0"
   }
 }
